aks-helloworld-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: aks-helloworld
  labels:
    name: aks-helloworld
spec:
  containers:
  - name: aks-helloworld
    image: demoacr1480.azurecr.io/aks-helloworld:v1
    ports:
    - containerPort: 80
