product-search-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-search 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-search
  template:
    metadata:
      labels:
        app: product-search
    spec:
      containers:
      - name: product-search
        image: demoacr1480.azurecr.io/product-search:v1
        ports:
        - containerPort: 80
