shopping-basket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-basket 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shopping-basket 
  template:
    metadata:
      labels:
        app: shopping-basket 
    spec:
      containers:
      - name: shopping-basket 
        image: demoacr1480.azurecr.io/aks-helloworld:v1
        ports:
        - containerPort: 80
