product-search-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-search
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: product-search
