shopping-basket-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shopping-basket
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: shopping-basket
