ecommerce-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: product-search
          servicePort: 80
        path: /search(/|$)(.*)
      - backend:
          serviceName: shopping-basket
          servicePort: 80
        path: /basket(/|$)(.*)

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ecommerce-ingress-static
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: product-search
          servicePort: 80
        path: /static(/|$)(.*)
